--- a/package.json
+++ b/package.json
@@ -1,15 +1,23 @@
 {
-  "name": "code-extractor",
+  "name": "code-optimize-extractor",
   "version": "1.0.0",
-  "description": "Tool to extract code from LLM chats and commit to git",
+  "description": "Tool to extract, optimize, and analyze code using LLM",
   "main": "src/index.js",
+  "bin": {
+    "code-optimize-extractor": "./bin/code-optimize-extractor"
+  },
   "scripts": {
     "start": "node src/index.js"
   },
   "dependencies": {
+    "@babel/parser": "^7.15.0",
+    "@babel/traverse": "^7.15.0",
     "axios": "^0.21.1",
+    "chalk": "^4.1.2",
     "dotenv": "^10.0.0",
     "fs-extra": "^10.0.0",
-    "simple-git": "^3.16.0"
+    "highlight.js": "^11.10.0",
+    "simple-git": "^3.16.0",
+    "yargs": "^17.0.1"
   }
 }
